--- a/app/views/curation_concerns/file_sets/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows.html.erb
@@ -1,33 +1,33 @@
 <%= presenter.attribute_to_html(:relation) %>
 
 <%= presenter.attribute_to_html(:description, render_as: :markdown) %>
-<%= presenter.attribute_to_html(:creator_full_name, label: 'Creator', catalog_search_link: true) %>
-<%= presenter.attribute_to_html(:contributor, label: 'Contributors', catalog_search_link: true) %>
+<%= presenter.attribute_to_html(:creator_full_name, label: t('creator'), catalog_search_link: true) %>
+<%= presenter.attribute_to_html(:contributor, label: t('contributor'), catalog_search_link: true) %>
 <%= presenter.attribute_to_html(:keywords, catalog_search_link: true) %>
-<%= presenter.attribute_to_html(:resource_type, label: 'Resource Type') %>
-<%= presenter.attribute_to_html(:content_type, label: 'Content Type') %>
+<%= presenter.attribute_to_html(:resource_type, label: t('resource_type')) %>
+<%= presenter.attribute_to_html(:content_type, label: t('content_type')) %>
 <%= presenter.attribute_to_html(:identifier) %>
 <%= presenter.attribute_to_html(:language) %>
-<%= presenter.attribute_to_html(:date_created, label: 'Date Created') %>
-<%= presenter.attribute_to_html(:sort_date, label: 'Sort Date') %>
-<%= presenter.attribute_to_html(:search_year, label: 'Search Year') %>
-<%= presenter.attribute_to_html(:display_date, render_as: :markdown, label: 'Display Date') %>
-<%= presenter.attribute_to_html(:copyright_holder, label: 'Copyright Holder') %>
-<%= presenter.attribute_to_html(:copyright_status, label: 'Copyright Status') %>
-<%= presenter.attribute_to_html(:rights_granted, label: 'Rights Granted') %>
-<%= presenter.attribute_to_html(:rights_granted_creative_commons, label: 'Rights Granted - Creative Commons') %>
-<%= presenter.attribute_to_html(:external_resource, label: 'Expiration Date') %>
-<%= presenter.attribute_to_html(:book_needs_handles, label: 'Book Needs Handles?') %>
-<%= presenter.attribute_to_html(:allow_download, label: 'Allow Download?') %>
-<%= presenter.attribute_to_html(:allow_hi_res, label: 'Allow Hi-Res?') %>
-<%= presenter.attribute_to_html(:exclusive_to_platform, label: 'Exclusive to Platform?') %>
-<%= presenter.attribute_to_html(:permissions_expiration_date, label: 'Permissions Expiration Date') %>
-<%= presenter.attribute_to_html(:allow_display_after_expiration, label: 'Allow Display After Expiration?') %>
-<%= presenter.attribute_to_html(:allow_download_after_expiration, label: 'Allow Download After Expiration?') %>
-<%= presenter.attribute_to_html(:credit_line, render_as: :markdown, label: 'Credit Line') %>
-<%= presenter.attribute_to_html(:holding_contact, label: 'Holding Contact') %>
-<%= presenter.attribute_to_html(:ext_url_doi_or_handle, label: 'External URL/DOI') %>
-<%= presenter.attribute_to_html(:use_crossref_xml, label: 'Use Crossref XML?') %>
-<%= presenter.attribute_to_html(:primary_creator_role, label: 'Primary Creator Role') %>
-<%= presenter.attribute_to_html(:transcript, render_as: :markdown, label: 'Transcript') %>
-<%= presenter.attribute_to_html(:translation, render_as: :markdown, label: 'Translation') %>
+<%= presenter.attribute_to_html(:date_created, label: t('date_created')) %>
+<%= presenter.attribute_to_html(:sort_date, label: t('sort_date')) %>
+<%= presenter.attribute_to_html(:search_year, label: t('search_year')) %>
+<%= presenter.attribute_to_html(:display_date, render_as: :markdown, label: t('display_date')) %>
+<%= presenter.attribute_to_html(:copyright_holder, label: t('copyright_holder')) %>
+<%= presenter.attribute_to_html(:copyright_status, label: t('copyright_status')) %>
+<%= presenter.attribute_to_html(:rights_granted, label: t('rights_granted')) %>
+<%= presenter.attribute_to_html(:rights_granted_creative_commons, label: t('rights_granted_creative_commons')) %>
+<%= presenter.attribute_to_html(:external_resource, label: t('external_resource')) %>
+<%= presenter.attribute_to_html(:book_needs_handles, label: t('book_needs_handles')) %>
+<%= presenter.attribute_to_html(:allow_download, label: t('allow_download')) %>
+<%= presenter.attribute_to_html(:allow_hi_res, label: t('allow_hi_res')) %>
+<%= presenter.attribute_to_html(:exclusive_to_platform, label: t('exclusive_to_platform')) %>
+<%= presenter.attribute_to_html(:permissions_expiration_date, label: t('permissions_expiration_date')) %>
+<%= presenter.attribute_to_html(:allow_display_after_expiration, label: t('allow_display_after_expiration')) %>
+<%= presenter.attribute_to_html(:allow_download_after_expiration, label: t('allow_download_after_expiration')) %>
+<%= presenter.attribute_to_html(:credit_line, render_as: :markdown, label: t('credit_line')) %>
+<%= presenter.attribute_to_html(:holding_contact, label: t('holding_contact')) %>
+<%= presenter.attribute_to_html(:ext_url_doi_or_handle, label: t('ext_url_doi_or_handle')) %>
+<%= presenter.attribute_to_html(:use_crossref_xml, label: t('use_crossref_xml')) %>
+<%= presenter.attribute_to_html(:primary_creator_role, label: t('primary_creator_role')) %>
+<%= presenter.attribute_to_html(:transcript, render_as: :markdown, label: t('transcript')) %>
+<%= presenter.attribute_to_html(:translation, render_as: :markdown, label: t('translation')) %>
