--- a/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
@@ -1,11 +1,11 @@
 <p><%= presenter.attribute_to_html(:description, render_as: :markdown, label: '') %></p>
-<%= presenter.attribute_to_html(:creator_full_name, label: 'Creator', render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
-<%= presenter.attribute_to_html(:primary_creator_role, label: 'Creator Role', render_as: :monograph_search, monograph_id: presenter.monograph.id) %>
-<%= presenter.attribute_to_html(:contributor, label: 'Contributors', render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:creator_full_name, label: t('creator'), render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:primary_creator_role, label: t('creator_role'), render_as: :monograph_search, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:contributor, label: t('contributor'), render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
 <%= presenter.attribute_to_html(:subjects) %>
-<%= presenter.attribute_to_html(:display_date, render_as: :markdown, label: 'Date') %>
-<%= presenter.attribute_to_html(:section_title, label: 'Related Chapter', render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:display_date, render_as: :markdown, label: t('display_date')) %>
+<%= presenter.attribute_to_html(:section_title, label: t('section_title'), render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
 <%= presenter.attribute_to_html(:keywords, render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
 <%= presenter.attribute_to_html(:content_type, render_as: :monograph_search, monograph_id: presenter.monograph.id) %>
 <%= presenter.attribute_to_html(:language, render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
-<%= presenter.attribute_to_html(:citable_link, label: 'Citable Link', render_as: :external_link) %>
+<%= presenter.attribute_to_html(:citable_link, label: t('citable_link'), render_as: :external_link) %>
