--- a/app/views/curation_concerns/file_sets/_attribute_rows_permissions.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows_permissions.html.erb
@@ -1,9 +1,10 @@
-<%= presenter.attribute_to_html(:embargo_release_date) %>
-<%= presenter.attribute_to_html(:lease_expiration_date) %>
+<%# Reminder: follow the style and manually capitalize multi-word labels! %>
+<%= presenter.attribute_to_html(:embargo_release_date, label: t('embargo_release_date')) %>
+<%= presenter.attribute_to_html(:lease_expiration_date, label: t('lease_expiration_date')) %>
 <%= presenter.attribute_to_html(:rights) %>
-<%= presenter.attribute_to_html(:copyright_holder, render_as: :markdown, label: 'Copyright Holder') %>
-<%= presenter.attribute_to_html(:copyright_status, label: 'Copyright Status') %>
-<%= presenter.attribute_to_html(:rights_granted, label: 'Rights Granted') %>
-<%= presenter.attribute_to_html(:rights_granted_creative_commons, label: 'Rights Granted - Creative Commons') %>
-<%= presenter.attribute_to_html(:credit_line, render_as: :markdown, label: 'Credit Line') %>
-<%= presenter.attribute_to_html(:holding_contact, render_as: :markdown, label: 'Holding Contact') %>
+<%= presenter.attribute_to_html(:copyright_holder, render_as: :markdown, label: t('copyright_holder')) %>
+<%= presenter.attribute_to_html(:copyright_status, label: t('copyright_status')) %>
+<%= presenter.attribute_to_html(:rights_granted, label: t('rights_granted')) %>
+<%= presenter.attribute_to_html(:rights_granted_creative_commons, label: t('rights_granted_creative_commons')) %>
+<%= presenter.attribute_to_html(:credit_line, render_as: :markdown, label: t('credit_line')) %>
+<%= presenter.attribute_to_html(:holding_contact, render_as: :markdown, label: t('holding_contact')) %>
