--- a/app/views/curation_concerns/monographs/_form_required_information.html.erb
+++ b/app/views/curation_concerns/monographs/_form_required_information.html.erb
@@ -2,9 +2,9 @@
   <legend>Required Information</legend>
 
   <%= f.input :title, as: :multi_value %>
-  <%= f.input :press, collection: @form.select_press, input_html: { class: 'required' }, label: 'Publisher' %>
-  <%= f.input :creator_family_name, label: 'Author (last name)' %>
-  <%= f.input :creator_given_name, label: 'Author (first name)' %>
-  <%= f.input :contributor, as: :multi_value, input_html: { class: 'form-control' }, label: 'Additional Authors' %>
+  <%= f.input :press, collection: @form.select_press, input_html: { class: 'required' }%>
+  <%= f.input :creator_family_name, label: t('author_last_name') %>
+  <%= f.input :creator_given_name, label: t('author_first_name') %>
+  <%= f.input :contributor, as: :multi_value, input_html: { class: 'form-control' }, label: t('additional_authors') %>
   <%= f.input :description, as: :multi_value, input_html: { rows: '14', type: 'textarea'} %>
 </fieldset>
