--- a/app/assets/stylesheets/themes.scss
+++ b/app/assets/stylesheets/themes.scss
@@ -1,6 +1,10 @@
 // Press themes are collected here
 
-// University of Minnesota press
+/* - - - - - - - - - - - - - - - - - - - - - - -
+//
+// University of Minnesota Press
+//
+- - - - - - - - - - - - - - - - - - - - - - - */
 // colors
 $umn-brand-color: #7b2e00;
 $umn-accent-color: #ffde7a;
@@ -204,7 +208,11 @@ $umn-white: #fff;
 
 }
 
+/* - - - - - - - - - - - - - - - - - - - - - - -
+//
 // Northwestern University Press
+//
+- - - - - - - - - - - - - - - - - - - - - - - */
 // colors
 $nw-brand-color: #4e2a84;
 $nw-accent-color: #d8d6d6;
@@ -387,5 +395,346 @@ $fulcrum-light-2: #bec4cc;
     }
   }
 
+
+}
+
+/* - - - - - - - - - - - - - - - - - - - - - - -
+//
+// Penn State University Press
+//
+- - - - - - - - - - - - - - - - - - - - - - - */
+// colors
+$psu-brand-color: #036;
+$psu-brand-color-alt: #ccc;
+$psu-brand-accent: #6cc;
+$psu-link: #00527b;
+$psu-white: #fff;
+$psu-jumbotron: #efefef;
+
+
+// typography
+@mixin jenson-display {
+  font-family: "adobe-jenson-pro-display", Georgia, serif;
+  text-transform: uppercase;
+  letter-spacing: 4.3px;
+  word-spacing: 1px;
+}
+
+@mixin jenson {
+  font-family: "adobe-jenson-pro", Georgia, serif;
+}
+
+@mixin proxima-nova {
+  font-family: "proxima-nova", Helvetica, sans-serif;
+}
+
+.pennstate {
+
+  // typography
+  @include jenson;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    @include proxima-nova;
+    font-weight: 600;
+  }
+
+  // links
+  a {
+    color: $psu-link;
+  }
+
+  a:hover,
+  a:active {
+    color: $psu-brand-accent;
+  }
+
+  // buttons
+  .btn {
+    @include proxima-nova;
+  }
+
+  .btn-default {
+    background-color: $psu-brand-accent;
+    border-color: $psu-brand-accent;
+    color: $psu-white;
+  }
+
+  .btn-default:hover,
+  .btn-default:active {
+    background-color: $psu-brand-color;
+    border-color: $psu-brand-color;
+    color: $psu-white;
+  }
+
+  #manage-monograph-button {
+    color: $psu-white;
+    background-color: $psu-brand-color;
+  }
+
+  #manage-monograph-button:hover,
+  #manage-monograph-button:active {
+    background-color: $psu-white;
+    color: $psu-brand-color;
+  }
+
+  // navigation menu
+  .navbar-default .navbar-nav > .open > a,
+  .navbar-default .navbar-nav > .open > a:hover,
+  .navbar-default .navbar-nav > .open > a:focus {
+    background-color: $psu-brand-accent;
+  }
+
+  #brand-bar {
+    background-color: $psu-brand-color;
+    height: 6em;
+
+    .container {
+      height: 100%;
+    }
+
+    .navbar-header {
+      background-image: image-url("pennstate.png");
+      background-position: 0px 11px;
+      background-repeat: no-repeat;
+      height: 100%;
+    }
+
+    .navbar-brand {
+      color: $psu-brand-color-alt;
+      @include jenson-display;
+      padding-left: 163px;
+      padding-top: 33px;
+
+    }
+
+    form {
+      padding-top: 14px;
+    }
+
+    .navbar-nav {
+      a#add-content,
+      a.login,
+      a.user-display-name {
+          color: $psu-white;
+      }
+    }
+
+    button.search-submit {
+      background-color: $psu-brand-accent;
+      border-color: $psu-brand-accent;
+    }
+
+    .navbar-right {
+      padding-top: 14px;
+    }
+
+  }
+
+  // press catalog
+
+  // jumbotron
+  .jumbotron {
+    background-color: $psu-jumbotron;
+    padding-top: 20px;
+    padding-bottom: 28px;
+    @include proxima-nova;
+
+    .logo {
+
+      img {
+        display: none;
+      }
+
+    }
+
+  }
+
+  .press {
+
+    h2:nth-child(2) {
+      margin-bottom: 1.5em;
+    }
+
+    .document,
+    .documentHeader {
+      margin-bottom: 2em;
+    }
+  }
+
+  // monograph
+  .monograph {
+    .documentHeader {
+      p {
+        @include proxima-nova;
+      }
+    }
+  }
+
+  // pagination
+  .page_links {
+    @include proxima-nova;
+  }
+
+  .pagination {
+    @include proxima-nova;
+     li a, li span {
+       color: $psu-brand-accent;
+     }
+
+     .active>a,
+     .active>a:hover,
+     .active>a:focus,
+     .active>span,
+     .active>span:hover,
+     .active>span:focus {
+       background-color: $psu-brand-accent;
+       border-color: $psu-brand-accent;
+       color: $psu-white;
+     }
+  }
+
+  // assets
+  .asset {
+    ul.nav-tabs li {
+      @include proxima-nova;
+    }
+  }
+
+  //footer
+  footer {
+    a,
+    a:hover,
+    a:active {
+      color: $psu-white;
+    }
+
+
+
+    .social,
+    .footer-nav {
+      background-color: $psu-brand-color-alt;
+
+      .crop {
+        img {
+          display: none;
+        }
+      }
+
+      a,
+      a:hover,
+      a:active {
+        color: $psu-brand-color;
+      }
+
+      p {
+        @include jenson-display;
+        background-image: image-url("pennstate-blue.png");
+        background-position: 0px 11px;
+        background-repeat: no-repeat;
+        height: 60px;
+        width: 38em;
+        margin-top: 2.4em;
+
+        a.brand {
+          margin-left: 45px;
+          position: relative;
+          top: 18px;
+        }
+      }
+
+    }
+    .copyright {
+      background-color: $psu-brand-color;
+    }
+    // .platform {
+    //  background-color: $umn-black-80;
+    // }
+  }
+
+  // collapse navbar at 1015px
+  @media (max-width: 1015px) {
+
+    .navbar-toggle {
+      margin-top: 25px;
+    }
+
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+
+    .jumbotron {
+      padding-top: 48px;
+    }
+    .navbar-form {
+    margin-left: -15px;
+    margin-right: -15px;
+    padding: 10px 15px;
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
+    margin-top: 8px;
+    margin-bottom: 8px;
+
+
+      .input-group {
+        position: relative;
+        display: table;
+        border-collapse: separate;
+        width: 100%;
+      }
+
+      .input-group .form-control {
+        position: relative;
+        z-index: 2;
+        float: left;
+        width: 100%;
+        margin-bottom: 0;
+      }
+
+      .input-group-btn {
+        position: relative;
+        font-size: 0;
+        white-space: nowrap;
+        width: 1%;
+      }
+
+    }
+  }
 
 }
