Resolves #263: Add a gallery view to the monograph_catalog page.
Borrows heavily from https://github.com/projectblacklight/blacklight-gallery
instead of just adding the gem since it comes with a lot of things we don't need.

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -186,3 +186,72 @@ footer.press {
     margin-top: 2em;
   }
 }
+
+
+// gallery view
+.view-icon-gallery {
+  &:before { content: "\e011"; }
+}
+
+#documents.gallery {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-flow: row wrap;
+  -webkit-flex-wrap: wrap;
+
+  .document {
+    border-bottom: none;
+    border-top: none;
+
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+
+    min-width: 250px;
+    min-height: 250px;
+    -webkit-flex: 1 0 250px;
+  }
+
+  .index_title {
+    width: 100%;
+  }
+
+  .document-counter {
+    display: none;
+  }
+
+  .index-document-functions {
+    clear: left;
+  }
+
+  .document-metadata {
+    dt, dd {
+      float: none;
+      width: auto;
+      clear: none;
+      text-align: left;
+      margin: 0;
+      padding: 0;
+    }
+  }
+}
+
+#documents.row.gallery {
+  display: block;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+
+  .document {
+    display: flex;
+    flex: none;
+    align-items: stretch;
+    .thumbnail {
+      width: 100%
+    }
+  }
+}
