Resolves #489: Ability to navigate to the previous and next asset from the asset page.

--- a/app/views/curation_concerns/file_sets/show.html.erb
+++ b/app/views/curation_concerns/file_sets/show.html.erb
@@ -1,6 +1,5 @@
 <% provide :page_title, @presenter.page_title %>
 <% provide :page_header do %>
-  <!-- breadcrumbs -->
   <div class="row">
     <nav class="breadcrumbs col-sm-12">
       <ol class="breadcrumb">
@@ -10,6 +9,14 @@
       </ol>
     </nav>
   </div>
+  <ul class="pager">
+      <li class="previous">
+        <%= link_to "Previous", main_app.curation_concerns_file_set_path(@presenter.previous_id) if @presenter.previous_id? %>
+      </li>
+      <li class="next">
+        <%= link_to "Next", main_app.curation_concerns_file_set_path(@presenter.next_id) if @presenter.next_id? %>
+      </li>
+  </ul>
 <% end %>
 
   <div class="row asset">
