--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -25,8 +25,9 @@
       <% end %>
       <h3><%= @monograph_presenter.creator_given_name.first %> <%= @monograph_presenter.creator_family_name.first %><%= contributors_string(@monograph_presenter.contributor) %></h3>
       <div class="description">
-      <p><%= render_markdown @monograph_presenter.description.first || '' %></p>
+        <%= render_markdown @monograph_presenter.description.first || '' %>
       </div>
+      <div><p></p></div>
       <div class="isbn">
         <% if defined?(@monograph_presenter.isbn) %>
         <ul class="isbn-hardcover list-unstyled">
