Resolves #560: Add google analytics pageviews to monographs
Monograph pageviews include views of the monograph, any of the
monograph's file_sets and any searches of file_sets.

--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -18,14 +18,19 @@
     <div class="monograph-cover">
       <%= render 'curation_concerns/base/representative_media', presenter: @monograph_presenter %>
     </div><!-- /.monograph-cover -->
+
     <div class="monograph-metadata">
       <h2><%= @monograph_presenter.title || '' %></h2>
       <% if can?(:edit, @monograph_presenter.id) %>
         <%= link_to "Manage Monograph and Files", main_app.monograph_show_path(@monograph_presenter.id), class: 'btn btn-primary', id: 'manage-monograph-button' %>
       <% end %>
       <h3><%= @monograph_presenter.creator_given_name.first %> <%= @monograph_presenter.creator_family_name.first %><%= contributors_string(@monograph_presenter.contributor) %></h3>
+
       <div class="description">
         <%= render_markdown @monograph_presenter.description.first || '' %>
+      </div>
+      <div>
+        <p>This item has been viewed <b><%= @monograph_presenter.pageviews %></b> times.</p>
       </div>
       <div><p></p></div>
       <div class="isbn">
@@ -59,6 +64,7 @@
         </div>
       </div>
       <% end %>
+
     </div><!-- /.monograph-metadata -->
   </div><!-- /.monograph-info -->
   <hr>
