--- a/app/views/curation_concerns/sections/show.html.erb
+++ b/app/views/curation_concerns/sections/show.html.erb
@@ -11,8 +11,8 @@
   <% end %>
 <% end %>
 
-<% collector = can?(:collect, @presenter.id) %>
-<% editor    = can?(:edit,    @presenter.id) %>
+<% collector = can?(:collect, @presenter) %>
+<% editor    = can?(:edit,    @presenter) %>
 
 <%= render 'representative_media', presenter: @presenter %>
 <%= render "attributes", presenter: @presenter %>
