resolves a series of accessibility issues for fulcrum static pages

--- a/fulcrum/_includes/icon-github.html
+++ b/fulcrum/_includes/icon-github.html
@@ -1,1 +1,1 @@
-<a href="https://github.com/{{ include.username }}"><span>{% include icon-github.svg %}</span></a>
+<a title="Fulcrum on GitHub" href="https://github.com/{{ include.username }}"><span>{% include icon-github.svg %}</span></a>
