--- a/fulcrum/_includes/icon-twitter.html
+++ b/fulcrum/_includes/icon-twitter.html
@@ -1,1 +1,1 @@
-<a href="https://twitter.com/{{ include.username }}"><span>{% include icon-twitter.svg %}</span></a>
+<a title="Follow Fulcrum on Twitter" href="https://twitter.com/{{ include.username }}"><span>{% include icon-twitter.svg %}</span></a>
