--- a/fulcrum/css/custom.css
+++ b/fulcrum/css/custom.css
@@ -56,9 +56,13 @@ html {
 
 .github {
   height: 2rem; }
+  .github path {
+    color: #BEC4CC; }
 
 .twitter {
   height: 2rem; }
+  .twitter path {
+    color: #BEC4CC; }
 
 html {
   font-family: "effra", Effra-regular, AvenirNext-Medium, Avenir-Medium, avenir, sans-serif;
@@ -145,7 +149,7 @@ h1, h2, h3, h4, h5, h6,
   color: #002C63; }
 
 a {
-  color: #00AFEC;
+  color: #0077b6;
   border-bottom: 3px solid transparent; }
   a:hover, a:focus, a:active {
     color: #002C63;
@@ -525,6 +529,26 @@ a > g, a > path {
  * the core Materialize files in the future
  *
  */
+.skip a {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden; }
+
+.skip a:focus {
+  position: static;
+  width: auto;
+  height: auto;
+  top: 0;
+  left: 0;
+  float: left;
+  padding: .5em;
+  background: #00AFEC;
+  color: #FFF;
+  border-bottom: 0; }
+
 @media only screen and (min-width: 601px) {
   nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
     height: 3.45rem;
@@ -573,6 +597,8 @@ p {
 footer.page-footer {
   background-color: #002C63;
   padding-top: 2rem; }
+  footer.page-footer .footer-copyright .container {
+    color: #BEC4CC; }
 
 .footer-menu {
   margin-top: 2.4rem; }
@@ -598,6 +624,8 @@ footer.page-footer {
 .button-collapse {
   color: #26a69a; }
 
+.about a {
+  color: #00AFEC; }
 .about a:hover, .about a:focus, .about a:active {
   color: #00AFEC;
   border-color: #00AFEC; }
