--- a/app/assets/stylesheets/themes.scss
+++ b/app/assets/stylesheets/themes.scss
@@ -226,7 +226,7 @@ $umn-white: #fff;
 $nw-brand-color: #4e2a84;
 $nw-accent-color: #d8d6d6;
 
-$nw-purple-60: #836eaa;
+$nw-purple-60: #735c9d;
 $nw-purple-30: #b6acd1;
 $nw-purple-10: #e4e0ee;
 $nw-black-80: #342f2e;
