--- a/app/views/curation_concerns/file_sets/show.html.erb
+++ b/app/views/curation_concerns/file_sets/show.html.erb
@@ -30,7 +30,7 @@
   </div>
 <% end %>
 
-  <div class="row asset">
+  <div id="maincontent" class="row asset">
     <!-- file_sets _media -->
     <div class="col-sm-6">
       <%= render "media", presenter: @presenter %>
