--- a/app/views/press_catalog/index.html.erb
+++ b/app/views/press_catalog/index.html.erb
@@ -1,6 +1,6 @@
 <% provide :page_title, @press.name %>
 <% provide :page_class, 'press' %>
 
-<div id="content">
+<div id="maincontent">
   <%= render 'catalog/press_results' %>
 </div>
