--- a/app/views/layouts/boilerplate.html.erb
+++ b/app/views/layouts/boilerplate.html.erb
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -33,7 +33,7 @@
     <!-- Typekit -->
     <%= render 'shared/typekit' %>
   <% end %>
-  
+
     <!-- CSS -->
     <%= stylesheet_link_tag 'application' %>
 
@@ -44,8 +44,10 @@
   </head>
 <% unless press_subdomain.nil? %>
   <body class="<%= press_subdomain %>">
+    <div class="skip"><a href="#maincontent">Skip to main content</a></div>
 <% else %>
   <body>
+    <div class="skip"><a href="#maincontent">Skip to main content</a></div>
 <% end %>
 
     <%= content_for?(:body) ? yield(:body) : yield %>
