Resolves #634: Google Analytics Cache
We're having problems with the google bot crawling the site so frequently
that it uses up our 50,000/day google analytics API quota. So we need to
cache it.

1. A rake task to cache google analytics data to the Rails.cache
2. Refactored the analytics_presenter to use the Rails.cache

--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -29,7 +29,7 @@
       <div class="description">
         <%= render_markdown @monograph_presenter.description.first || '' %>
       </div>
-      <% pageviews = nil #@monograph_presenter.pageviews %>
+      <% pageviews = @monograph_presenter.pageviews %>
       <% unless pageviews.nil? %>
       <div>
         <p>This item has been viewed <b><%= pageviews %></b> times.</p>
