adding transcripts to videos

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  *= require jquery-ui/datepicker
  *= require leaflet
  *= require blacklight_facets
+ *= require ableplayer
  *= require heliotrope
  *= require fulcrum
  *= require themes
