--- a/app/views/curation_concerns/file_sets/_media.html.erb
+++ b/app/views/curation_concerns/file_sets/_media.html.erb
@@ -29,6 +29,11 @@
     <figcaption><%= presenter.attribute_to_html(:caption, render_as: :markdown, label: '') %></figcaption>
   </figure> <!-- /.image/media -->
 
+  <% if @presenter.transcript.present? %>
+  <!-- AblePlayer manages this div -->
+  <div id="transcript"></div>
+  <% end %>
+
   <% if @presenter.translation.present? %>
   <div class="panel panel-default translation">
     <div class="panel-heading">
@@ -38,14 +43,4 @@
       <p><%= presenter.attribute_to_html(:translation, render_as: :markdown, label: '') %></p>
     </div>
   </div><!-- /.translation panel -->
-  <% end %>
-  <% if @presenter.transcript.present? %>
-  <div class="panel panel-default transcript">
-    <div class="panel-heading">
-      <h3 class="panel-title">Transcript</h3>
-    </div>
-    <div class="panel-body fixed">
-      <p><%= presenter.attribute_to_html(:transcript, render_as: :markdown, label: '') %></p>
-    </div>
-  </div><!-- /.transcript panel -->
   <% end %>
