--- a/app/views/curation_concerns/file_sets/media_display/_audio.html.erb
+++ b/app/views/curation_concerns/file_sets/media_display/_audio.html.erb
@@ -1,5 +1,14 @@
-  <audio id="audio" controls="controls" class="audiojs" preload="auto">
+<% if @presenter.transcript.present? %>
+<audio id="audio" preload="auto" data-able-player data-transcript-div="transcript">
+  <source src="<%= main_app.download_path(file_set, file: 'ogg') %>" type="audio/ogg" />
+  <source src="<%= main_app.download_path(file_set, file: 'mp3') %>" type="audio/mpeg" />
+  <track kind="captions" src="<%= main_app.download_path(file_set, file: 'vtt') %>" srclang="en" label="English"  />
+  Your browser does not support the audio tag.
+</audio>
+<% else %>
+  <audio id="audio" preload="auto" data-able-player>
     <source src="<%= main_app.download_path(file_set, file: 'ogg') %>" type="audio/ogg" />
     <source src="<%= main_app.download_path(file_set, file: 'mp3') %>" type="audio/mpeg" />
     Your browser does not support the audio tag.
   </audio>
+<% end %>
