--- a/app/views/curation_concerns/file_sets/media_display/_video.html.erb
+++ b/app/views/curation_concerns/file_sets/media_display/_video.html.erb
@@ -1,5 +1,14 @@
-  <video id="video" controls="controls" class="video-js vjs-default-skin" data-setup="{}" preload="auto">
+<% if @presenter.transcript.present? %>
+  <video id="video" preload="auto" data-able-player data-transcript-div="transcript">
+    <source src="<%= main_app.download_path(file_set, file: 'webm') %>" type="video/webm" />
+    <source src="<%= main_app.download_path(file_set, file: 'mp4') %>" type="video/mp4" />
+    <track kind="captions" src="<%= main_app.download_path(file_set, file: 'vtt') %>" srclang="en" label="English"  />
+    Your browser does not support the video tag.
+  </video>
+<% else %>
+  <video id="video" preload="auto" data-able-player>
     <source src="<%= main_app.download_path(file_set, file: 'webm') %>" type="video/webm" />
     <source src="<%= main_app.download_path(file_set, file: 'mp4') %>" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
+<% end %>
